Initialize libdbus for thread-safety

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=65296